# PongOnAcc

./: README.md  main.py  tcp_server.py  tcp_server_test.py
Docs/: main.tex
Docs/Chapters/: testy.tex  zalozenia.tex  zlozenie.tex
pico/: CMakeLists.txt  main.c
pico/I2C/: i2c.c  i2c.h
pico/MPU6050/: axis.h  mpu6050.c  mpu6050.h  mpu6050_regMap.h
pico/TCP/: .gitignore  tcp_client.c  tcp_client.h
